samples/_failures_safe/1761477030_bda0fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f2273606.c: In function ‘main’:
./samples/SAFE/__tmp_f2273606.c:163:13: error: expected expression at end of input
  163 |             case
      |             ^~~~
./samples/SAFE/__tmp_f2273606.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2273606.c:163:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f2273606.c:163:13: error: expected declaration or statement at end of input
